--- a/.azdevops/workflows/deployDevBox.yml
+++ b/.azdevops/workflows/deployDevBox.yml
@@ -10,6 +10,7 @@ variables:
   devBoxResourceGroupName: "PetDx-rg"
   networkResourceGroupName: "PetDx-Network-rg"
   managementResourceGroupName: "PetDx-Management-rg"
+  bicepArtifactsPath: '$(Build.SourcesDirectory)/bicepArtifacts'
 
 jobs:
 
@@ -19,44 +20,57 @@ jobs:
     name: Linux
   steps:
   - checkout: self
+    displayName: 'Checkout Source Code'
+
+  # Update packages and install the latest version of Bicep
   - task: Bash@3
     displayName: 'Update Packages and Install Bicep'
     inputs:
       targetType: 'inline'
       script: |
         az bicep upgrade
-  
+
+  # Build the Bicep files for Dev Box Management Resources
   - task: Bash@3
     displayName: 'Build Dev Box Management Resources Bicep files'
     inputs:
       targetType: 'inline'
       script: |
-        az bicep build --file ./src/deploy/bicep/management/logAnalytics/deploy.bicep --outfile ./bicepArtifacts/deployManagement.json
+        az bicep build --file ./src/deploy/bicep/management/logAnalytics/deploy.bicep --outfile $(bicepArtifactsPath)/deployManagement.json
 
+  # Build the Bicep files for Dev Box Network Resources
   - task: Bash@3
     displayName: 'Build Dev Box Network Resources Bicep files'
     inputs:
       targetType: 'inline'
       script: |
-        az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outfile ./bicepArtifacts/deployDevBox.json
+        az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outfile $(bicepArtifactsPath)/deployNetwork.json
 
+  # Build the Bicep files for Dev Box DevCenter Resources
   - task: Bash@3
     displayName: 'Build Dev Box DevCenter Resources Bicep files'
     inputs:
       targetType: 'inline'
       script: |
-        az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile ./bicepArtifacts/deployDevBox.json
-  
+        az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile $(bicepArtifactsPath)/deployDevBox.json
+
+  # Publish the built Bicep artifacts
   - task: PublishBuildArtifacts@1
     displayName: 'Upload Bicep Artifacts'
     inputs:
-      PathtoPublish: '$(Build.SourcesDirectory)/bicepArtifacts'
+      PathtoPublish: '$(bicepArtifactsPath)'
       ArtifactName: 'bicepArtifacts'
 
 - job: Deploy
   displayName: 'Deploy Microsoft DevBox Resources to Azure'
   dependsOn: Build
+  pool:
+    name: Linux
   steps:
+  - checkout: self
+    displayName: 'Checkout Source Code'
+
+  # Grant execute permissions to the deployment script
   - task: Bash@3
     displayName: 'Grant permissions to the Script'
     inputs:
@@ -64,6 +78,7 @@ jobs:
       script: |
         chmod +x ./src/deploy/bicep/bash/deployResourcesOrganization.sh
 
+  # Deploy the Landing Zone Resources using the deployment script
   - task: AzureCLI@2
     displayName: 'Deploy Landing Zone Resources'
     inputs:
@@ -73,6 +88,7 @@ jobs:
       inlineScript: |
         ./src/deploy/bicep/bash/deployResourcesOrganization.sh $(devBoxResourceGroupName) $(networkResourceGroupName) $(managementResourceGroupName) $(location)
 
+  # Deploy the Dev Box Management Resources to Azure
   - task: AzureCLI@2
     displayName: 'Deploy Dev Box Management Resources to Azure'
     inputs:
@@ -85,7 +101,8 @@ jobs:
           --template-file ./src/deploy/bicep/management/logAnalytics/deploy.bicep \
           --parameters solutionName=$(solutionName) \
           --mode Incremental 
-  
+
+  # Deploy the Dev Box Network Resources to Azure
   - task: AzureCLI@2
     displayName: 'Deploy Dev Box Network Resources to Azure'
     inputs:
@@ -99,6 +116,7 @@ jobs:
           --parameters solutionName=$(solutionName) managementResourceGroupName=$(managementResourceGroupName) \
           --mode Incremental
 
+  # Deploy the Dev Box DevCenter Resources to Azure
   - task: AzureCLI@2
     displayName: 'Deploy Dev Box DevCenter Resources to Azure'
     inputs:
