--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  location: "northuscentral"
+  location: "westus3"
   solutionName: "PetDx"
   devBoxResourceGroupName: "PetDx-rg"
   networkResourceGroupName: "PetDx-Network-rg"
