--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -101,7 +101,7 @@ jobs:
           resourceGroupName: ${{ env.managementResourceGroupName }}
           template: ./src/deploy/bicep/management/logAnalytics/deploy.bicep
           parameters: 'solutionName=${{ env.solutionName }}'
-          deploymentMode: 'Incremental'
+          deploymentMode: 'Complete'
       
       # Deploy Network Connectivity Resources using ARM template
       - name: Deploy Dev Box Network Resources to Azure
@@ -111,7 +111,7 @@ jobs:
           resourceGroupName: ${{ env.networkResourceGroupName }}
           template: ./src/deploy/bicep/network/deploy.bicep
           parameters: 'solutionName=${{ env.solutionName }} managementResourceGroupName=${{ env.managementResourceGroupName }}'
-          deploymentMode: 'Incremental'
+          deploymentMode: 'Complete'
 
       # Deploy Dev Center Resources using ARM template
       - name: Deploy Dev Box DevCenter Resources to Azure
@@ -121,7 +121,7 @@ jobs:
           resourceGroupName: ${{ env.devBoxResourceGroupName }}
           template: ./src/deploy/bicep/devBox/deploy.bicep
           parameters: 'solutionName=${{ env.solutionName }}'
-          deploymentMode: 'Incremental'
+          deploymentMode: 'Complete'
 
   publish-bicep-artifacts:
     runs-on: ubuntu-latest
