--- a/.azdevops/workflows/devBox-CI.yml
+++ b/.azdevops/workflows/devBox-CI.yml
@@ -3,10 +3,10 @@ trigger:
 
 variables:
   location: "westus3"
-  solutionName: "PetDx"
-  devBoxResourceGroupName: "PetDx-rg"
-  networkResourceGroupName: "PetDx-Network-rg"
-  managementResourceGroupName: "PetDx-Management-rg"
+  solutionName: "ContosoIpeDx"
+  devBoxResourceGroupName: "ContosoIpeDx-rg"
+  networkResourceGroupName: "ContosoIpeDx-Network-rg"
+  managementResourceGroupName: "ContosoIpeDx-Management-rg"
   bicepArtifactsPath: '$(Build.SourcesDirectory)/bicepArtifacts'
 
 jobs:
