--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -10,10 +10,10 @@ on:
 
 env:
   location: "northuscentral"
-  solutionName: "PetDx"
-  devBoxResourceGroupName: "PetDx-rg"
-  networkResourceGroupName: "PetDx-Network-rg"
-  managementResourceGroupName: "PetDx-Management-rg"
+  solutionName: "ContosoIpeDx"
+  devBoxResourceGroupName: "ContosoIpeDx-rg"
+  networkResourceGroupName: "ContosoIpeDx-Network-rg"
+  managementResourceGroupName: "ContosoIpeDx-Management-rg"
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
 
 jobs:
