--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -33,6 +33,8 @@ jobs:
       # Upgrade Bicep to the latest version
       - name: Upgrade Bicep
         run: |
+          sudo apt-get update && \
+          sudo apt-get upgrade -y && \
           sudo az bicep upgrade
 
       # Checkout the repository to get the source code
