--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -10,10 +10,10 @@ on:
 
 env:
   location: "northuscentral"
-  solutionName: "ContosoDx"
-  devBoxResourceGroupName: "ContosoDx-rg"
-  networkResourceGroupName: "ContosoDx-Network-rg"
-  managementResourceGroupName: "ContosoDx-Management-rg"
+  solutionName: "ContosoDevEx"
+  devBoxResourceGroupName: "ContosoDevEx-rg"
+  networkResourceGroupName: "ContosoDevEx-Network-rg"
+  managementResourceGroupName: "ContosoDevEx-Management-rg"
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
 
 jobs:
